pkg/main/default/objects/Environment__mdt/Environment__mdt.object-meta.xml
<CustomObject>
	<label>DocuSign Environment Metadata</label>
	<pluralLabel>DocuSign Environment Metadata</pluralLabel>
</CustomObject>