pkg/main/default/objects/Environment__mdt/fields/AccountBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>AccountBaseUrl__c</fullName>
	<label>DocuSign Account API Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>