pkg/main/default/objects/Environment__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>