pkg/main/default/objects/Environment__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
	<fullName>ClientSecret__c</fullName>
	<label>Client Secret</label>
	<length>100</length>
	<type>Text</type>
</CustomField>