pkg/main/default/objects/Environment__mdt/fields/IsVisible__c.field-meta.xml
<CustomField>
	<fullName>IsVisible__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is visible during environment selection?</label>
	<type>Checkbox</type>
</CustomField>