pkg/main/default/objects/Environment__mdt/fields/JwtSigningKey__c.field-meta.xml
<CustomField>
	<fullName>JwtSigningKey__c</fullName>
	<label>JWT signing key</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>