pkg/main/default/objects/Environment__mdt/fields/ProvisioningBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>ProvisioningBaseUrl__c</fullName>
	<label>DocuSign Provisioning API Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>