pkg/main/default/objects/Environment__mdt/fields/TrialPlanId__c.field-meta.xml
<CustomField>
    <fullName>TrialPlanId__c</fullName>
    <label>Trial Plan ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>